trunk/Archive2/9c/2f99b55b20ef90/output
main.cpp:22:58: error: 'i' is a private member of 'A::X::Y'
    template <class T> void f2(T t) { std::cout << X::Y::i << '\n'; }
                                                         ^
main.cpp:14:30: note: implicitly declared private here
            static const int i = 1000;
                             ^
1 error generated.
